--- a/Sample_RV_ItemDecoration/app/src/main/res/layout/activity_main.xml
+++ b/Sample_RV_ItemDecoration/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="vertical"
+        android:background="@color/colorPrimary"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
