Using NavigationUI to configure Bottom Navigation - Set up a BottomNavigationView for use with a NavController - This will android.view.MenuItem.onNavDestinationSelected when a menu item is selected - Notice that their ids match the destinations of navigation graph

--- a/Sample_navigation/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Sample_navigation/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2018 The Android Open Source Project
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -12,9 +11,11 @@
   ~ limitations under the License.
   -->
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@+id/home_dest">
+
+    <!-- HomeFragment-->
     <fragment
         android:id="@+id/home_dest"
         android:name="com.example.android.codelabs.navigation.HomeFragment"
@@ -36,13 +37,12 @@
         tools:layout="@layout/flow_step_one_fragment">
         <argument
             android:name="flowStepNumber"
-            app:argType="integer"
-            android:defaultValue="1"/>
+            android:defaultValue="1"
+            app:argType="integer" />
 
         <action
             android:id="@+id/next_action"
-            app:destination="@+id/flow_step_two_dest">
-        </action>
+            app:destination="@+id/flow_step_two_dest" />
     </fragment>
 
     <fragment
@@ -52,13 +52,12 @@
 
         <argument
             android:name="flowStepNumber"
-            app:argType="integer"
-            android:defaultValue="2"/>
+            android:defaultValue="2"
+            app:argType="integer" />
 
         <action
             android:id="@+id/next_action"
-            app:popUpTo="@id/home_dest">
-        </action>
+            app:popUpTo="@id/home_dest" />
     </fragment>
 
     <fragment
@@ -69,13 +68,14 @@
 
         <argument
             android:name="myarg"
-            android:defaultValue="Android!"/>
+            android:defaultValue="Android!" />
         <!-- TODO STEP 12.1 - Add a deep link to www.example.com/{myarg}/ -->
 
         <!--<deepLink app:uri="www.example.com/{myarg}" />-->
 
         <!-- TODO END STEP 12.1 -->
     </fragment>
+
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.android.codelabs.navigation.SettingsFragment"
