--- a/Sample_BLE/app/src/main/res/layout/peripheral_fragment.xml
+++ b/Sample_BLE/app/src/main/res/layout/peripheral_fragment.xml
@@ -36,4 +36,13 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.4" />
 
+    <TextView
+        android:id="@+id/tvDeviceName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAdvertise" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
