--- a/Sample_BLE/app/src/main/res/layout/listitem_device.xml
+++ b/Sample_BLE/app/src/main/res/layout/listitem_device.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemScanResult"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -12,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         tools:ignore="SmallSp"
         tools:text="device name" />
@@ -21,7 +22,7 @@
         android:id="@+id/tvDeviceAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="14sp"
         tools:ignore="SmallSp"
         tools:text="device name" />
 
