Associating a web link with a destination

--- a/Sample_navigation/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Sample_navigation/app/src/main/res/navigation/mobile_navigation.xml
@@ -69,11 +69,9 @@
         <argument
             android:name="myarg"
             android:defaultValue="Android!" />
-        <!-- TODO STEP 12.1 - Add a deep link to www.example.com/{myarg}/ -->
 
-        <!--<deepLink app:uri="www.example.com/{myarg}" />-->
+        <deepLink app:uri="www.example.com/{myarg}" />
 
-        <!-- TODO END STEP 12.1 -->
     </fragment>
 
     <fragment
